--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.jetbrains:annotations:23.0.0'
+    implementation 'de.vinado.spring:dkim-javamail:1.2.2'
+	implementation 'de.vinado.boot:spring-boot-autoconfigure-dkim-javamail:1.2.2'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
