--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.jetbrains:annotations:23.0.0'
     implementation 'de.vinado.spring:dkim-javamail:1.2.2'
 	implementation 'de.vinado.boot:spring-boot-autoconfigure-dkim-javamail:1.2.2'
-	compileOnly 'org.projectlombok:lombok'
+    implementation 'no.api.freemarker:freemarker-java8:2.1.0'
+    compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
